tests/error/array_errors/subscript_non_inout.err
Error: Subscript moved (at $FILE:14:8)
   | 
12 | @guppy(module)
13 | def main(qs: array[qubit, 42]) -> tuple[qubit, array[qubit, 42]]:
14 |     q = qs[0]
   |         ^^^^^ Cannot move a subscript of `qs` with linear type
   |               `array[qubit, 42]`

Note: Subscripts on linear types are only allowed to be borrowed, not moved

Guppy compilation failed due to 1 previous error
